--- a/privado/DetalhesPacotes/detalhesLondres.html
+++ b/privado/DetalhesPacotes/detalhesLondres.html
@@ -4,24 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detalhes do Pacote</title>
-    <link rel="stylesheet" href="/publico/estilo.css">
+    <link rel="stylesheet" href="/estilo.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-              <a class="navbar-brand" href="/publico/index.html"><em>World Tour</em></a>
+              <a class="navbar-brand" href="/index.html"><strong>World Tour</strong></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/publico/pacotes.html">Pacotes</a>
+                    <a class="nav-link active" aria-current="page" href="/pacotes.html">Pacotes</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" href="/publico/passagens.html">Passagens</a>
+                    <a class="nav-link active" href="/passagens.html">Passagens</a>
                   </li>
                   <li class="nav-item dropdown">
                     <a class="nav-link active dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -34,17 +34,16 @@
                     </ul>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/publico/sobre.html">Sobre</a>
+                    <a class="nav-link active" aria-current="page" href="/sobre.html">Sobre</a>
                   </li>         
         </ul>
 
             <form class="d-flex">
-                <a href="/publico/login/login.html" class="btn btn-primary">Login</a>
+                <a href="/login.html" class="btn btn-primary">Login</a>
             <div class="botao-cadastrar">
-                <a href="/privado/cadastro.html" class="btn btn-outline-secondary">Cadastre-se</a>
+                <a href="/cadastro.html" class="btn btn-outline-secondary">Cadastre-se</a>
             </div>
-                <!-- <input class="form-control me-2" type="search" placeholder="Pesquise por Destino" aria-label="Search">
-                  <a href="passagens.html" class="btn btn-primary">Buscar</a> -->
+
             </form>
         </div>
         </div>
@@ -53,7 +52,9 @@
 
     <main>
         <h2><b>Pacote para Londres</b></h2>
-        
+        <div class="posicao-img">
+          <img src="/londres.jpeg" class="imagens-pag-detalhes" alt="imagemLondres">
+        </div> 
         <div id="detalhes-pacote" class="alinhar-detalhes">
             <p><strong>Destino:</strong> A mais bela cidade de Londres! <span id="destino-pacote"></span></p>
             <p><strong>Descrição:</strong> Londres, capital da Inglaterra e do Reino Unido, é uma cidade do século 21 com uma história que remonta à era romana. Seu centro abriga as sedes imponentes do Parlamento, a famosa torre do relógio do Big Ben e a Abadia de Westminster, local de coroação dos monarcas britânicos. Do outro lado do rio Tâmisa, a roda gigante London Eye tem vista panorâmica do complexo cultural da margem sul e de toda a cidade. <span id="descricao-pacote"></span></p>
@@ -73,10 +74,10 @@
     </main>
 
  <footer>
-        <p class="rodapé">&copy; 2025 <em>World Tour</em>. Todos os direitos reservados.</p>
+        <p>&copy; 2025 <em>World Tour</em>. Todos os direitos reservados.</p>
 </footer>
+</body>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-</body>
 </html>
 
