--- a/privado/DetalhesPacotes/detalhesOrlando.html
+++ b/privado/DetalhesPacotes/detalhesOrlando.html
@@ -4,24 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detalhes do Pacote</title>
-    <link rel="stylesheet" href="/publico/estilo.css">
+    <link rel="stylesheet" href="/estilo.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
     <header>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/publico/index.html"><em>World Tour</em></a>
+          <a class="navbar-brand" href="/index.html"><strong>World Tour</strong></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/publico/pacotes.html">Pacotes</a>
+                <a class="nav-link active" aria-current="page" href="/pacotes.html">Pacotes</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="/publico/passagens.html">Passagens</a>
+                <a class="nav-link active" href="/passagens.html">Passagens</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link active dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -34,24 +34,27 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/publico/sobre.html">Sobre</a>
+                <a class="nav-link active" aria-current="page" href="/sobre.html">Sobre</a>
               </li>         
     </ul>
 
         <form class="d-flex">
-            <a href="/publico/login/login.html" class="btn btn-primary">Login</a>
+            <a href="/login.html" class="btn btn-primary">Login</a>
         <div class="botao-cadastrar">
-            <a href="/privado/cadastro.html" class="btn btn-outline-secondary">Cadastre-se</a>
+            <a href="/cadastro.html" class="btn btn-outline-secondary">Cadastre-se</a>
         </div>
-                 </form>
+    </form>
     </div>
     </div>
 </nav>
 </header>
 
     <main>
-        <h2><b>Pacote para Orlando</b></h2>
-  <div id="detalhes-pacote" class="alinhar-detalhes">
+    <h2><b>Pacote para Orlando</b></h2>
+    <div class="posicao-img">
+      <img src="/disney.webp" class="imagens-pag-detalhes" alt="imagemDisney">
+    </div>
+    <div id="detalhes-pacote" class="alinhar-detalhes">
     <p><strong>Destino:</strong> Disney, o parque mágico te aguarda! <span id="destino-pacote"></span></p>
     <p><strong>Descrição:</strong> Há restaurante Walt Disney World Resort, comumente conhecido como Walt Disney World e informalmente Disney World, é o resort de entretenimento mais visitado em todo o mundo, situado em Bay Lake, Flórida, próxima a cidade de Orlando. <span id="descricao-pacote"></span></p>
     <p><strong>Incluso:</strong> Passagens aéreas, hospedagem e café da manhã no Hotel Disney's Animal Kingdom Lodge, translado ida e volta e guia turístico.<span id="data-pacote"></span></p>
@@ -70,10 +73,11 @@
 </main>
 
     <footer>
-        <p class="rodapé">&copy; 2025 <em>World Tour</em>. Todos os direitos reservados.</p>
+        <p>&copy; 2025 <em>World Tour</em>. Todos os direitos reservados.</p>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+
 </body>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </html>
 
