--- a/publico/cadastro.html
+++ b/publico/cadastro.html
@@ -5,23 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>World Tour</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="/privado/estilo.css">
+    <link rel="stylesheet" href="/estilo.css">
 </head>
 <body>
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/publico/index.html"><em>World Tour</em></a>
+        <a class="navbar-brand" href="/index.html"><strong>World Tour</strong></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/publico/pacotes.html">Pacotes</a>
+              <a class="nav-link active" aria-current="page" href="/pacotes.html">Pacotes</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="/publico/passagens.html">Passagens</a>
+              <a class="nav-link active" href="/passagens.html">Passagens</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link active dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -34,15 +34,15 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/publico/sobre.html">Sobre</a>
+              <a class="nav-link active" aria-current="page" href="/sobre.html">Sobre</a>
             </li>         
           </ul>
           <form class="d-flex">
             <div class="botao-cadastrar">
-              <a href="/publico/login/login.html" class="btn btn-primary">Login</a>
+              <a href="/login.html" class="btn btn-primary">Login</a>
             </div>
             <div class="botao-cadastrar">
-                <a href="/privado/cadastro.html" class="btn btn-outline-secondary">Cadastre-se</a>
+                <a href="cadastro.html" class="btn btn-outline-secondary">Cadastre-se</a>
             </div>
           </form>
         </div>
@@ -52,7 +52,7 @@
 
 <div class="container mt-5">
   <h2 class="titulo">Cadastre-se</h2>
-  <form id="formulario" class="label" novalidate>
+  <form id="formulario" method="post" action="#" class="label" novalidate>
     <div class="form-group">
       <label for="nome">Nome</label>
       <input type="text" class="form-control bg-light" id="nome" placeholder="Digite o nome" required>
@@ -195,14 +195,19 @@
   </form>
 </div>
 
+<div id="mensagem">
+</div>
+
+<div id="espacoTabela">
+</div>
+
 
 <footer>
-        <p class="rodapé">&copy; 2025 <em>World Tour</em>. Todos os direitos reservados.</p>
+        <p>&copy; 2025 <em>World Tour</em>. Todos os direitos reservados.</p>
 </footer>
-
 </body>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-<script src="/privado/scriptcadastro.js"></script>
-<script src="/index.js"></script>
+<script src="/scriptcadastro.js"></script>
+
 </html>
