--- a/publico/login.html
+++ b/publico/login.html
@@ -50,50 +50,67 @@
     </nav>
   </header>
 
-  <main>
-    <h2><b>Preços Incríveis em Pacotes de Viagens</b></h2>
-    <div class="card-wraper">
-      <div class="card" style="width: 18rem;">
-        <img src="londres.jpeg" class="card-img-top" alt="imagemLondres">
-        <div class="card-body">
-          <h5 class="card-title"><strong>Viagem para Londres</strong></h5>
-          <p class="card-text">Destino: Londres</p>
-          <p class="card-text">Data de Partida: 15/04/2025</p>
-          <p class="card-text"><b>Pacotes a partir de <br>R$2.099,00</b></b></p>
-          <a href="/DetalhesPacotes/detalhesLondres.html" class="btn btn-primary">Ver Detalhes</a>
+  <div class="container w-50">
+    <h2><strong>Faça o seu Login</strong></h2>
+    <form method="POST" action="/login" class="row g-3 needs-validation" novalidate>
+      <div class="row pt-4">
+        <div class="col-md-4">
+          <label for="validationCustom01" class="form-label">Email</label>
+          <input type="text" class="form-control" id="usuario" name="usuario" value="" required>
+          <div class="valid-feedback">
+            OK!
+          </div>
+          <div class="invalid-feedback">
+            Por favor, informe o seu email!
+          </div>
         </div>
       </div>
+      <div class="row pt-4">
+        <div class="col-md-4">
+          <label for="validationCustomUsername" class="form-label">Senha:</label>
+          <div class="input-group has-validation">
+            <span class="input-group-text" id="inputGroupPrepend">#</span>
+            <input type="password" class="form-control" id="senha" name="senha" aria-describedby="inputGroupPrepend" required>
+            <div class="valid-feedback">
+              OK!
+            </div>
+            <div class="invalid-feedback">
+              Por favor, informe a senha.
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row pt-2">
+        <div class="col-12">
+          <button class="btn btn-primary" type="submit">Entrar</button>
+          <button class="btn btn-secondary" type="button" onclick="history.back()">Voltar</button>
+        </div>
+      </div>
+    </form>
+    <script>
+      (() => {
+        'use strict'
 
-      <div class="card" style="width: 18rem;">
-        <img src="maldivas.jpg" class="card-img-top" alt="imagemMaldivas">
-        <div class="card-body">
-          <h5 class="card-title"><strong>Viagem para Maldivas</strong></h5>
-          <p class="card-text">Destino: Maldivas</p>
-          <p class="card-text">Data de Partida: 20/05/2025</p>
-          <p class="card-text"><b>Pacotes a partir de <br>R$14.213,00</b></b></p>
-          <a href="/DetalhesPacotes/detalhesMaldivas.html" class="btn btn-primary">Ver Detalhes</a>
-        </div>
-      </div>
+        const forms = document.querySelectorAll('.needs-validation')
 
-      <div class="card" style="width: 18rem;">
-        <img src="disney.webp" class="card-img-top" alt="imagemDisney">
-        <div class="card-body">
-          <h5 class="card-title"><strong>Viagem para Disney</strong></h5>
-          <p class="card-text">Destino: Disney</p>
-          <p class="card-text">Data de Partida: 10/06/2025</p>
-          <p class="card-text"><b>Pacotes a partir de <br>R$3.116,00</b></b></p>
-          <a href="/DetalhesPacotes/detalhesOrlando.html" class="btn btn-primary">Ver Detalhes</a>
-        </div>
-      </div>
-    </div>
-    </div>
-  </main>
+        Array.from(forms).forEach(form => {
+          form.addEventListener('submit', event => {
+            if (!form.checkValidity()) {
+              event.preventDefault()
+              event.stopPropagation()
+            }
+
+            form.classList.add('was-validated')
+          }, false)
+        })
+      })()
+    </script>
+  </div>
 
   <footer class="footer">
     <p>&copy; 2025 <em>World Tour</em>. Todos os direitos reservados.</p>
   </footer>
 </body>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 
 </html>
