--- a/privado/DetalhesPacotes/detalhesMaldivas.html
+++ b/privado/DetalhesPacotes/detalhesMaldivas.html
@@ -67,10 +67,10 @@
       <p><strong>Quantidade de lugares disponíveis:</strong> 04</p>
 
       <label for="quantidade"><strong>Quantidade de lugares:</strong></label>
-      <input type="number" id="quantidade" name="quantidade" min="1" max="10" value="1">
-      <p><strong>Total: R$ <span id="total">20.000,00</strong></span></p>
+      <input type="number" id="numLugares" name="numLugares" min="1" max="4" value="1" onchange="atualizarPreco()">
+      <p><strong>Total: R$ <span id="precoTotal">20.000,00</strong></span></p>
       <section class="botao-comprar">
-        <button type="submit" class="btn btn-primary btn-lg">Comprar</button>
+        <button id="finalizarReservaBtn" onclick="finalizarReserva()" class="btn btn-primary btn-lg">Finalizar Reserva</button>
       </section>
     </div>
   </main>
@@ -81,5 +81,6 @@
 </body>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+<script src="/scriptcalculoMaldivas.js"></script>
 
 </html>
