--- a/publico/index.html
+++ b/publico/index.html
@@ -53,35 +53,35 @@
   <main>
     <h2><b>Preços Incríveis em Pacotes de Viagens</b></h2>
     <div class="card-wraper">
-      <div class="card" style="width: 18rem;">
-        <img src="londres.jpeg" class="card-img-top" alt="imagemLondres">
+      <div class="card">
+        <img src="/Londres.jpg" class="card-img-top" alt="imagemLondres">
         <div class="card-body">
           <h5 class="card-title"><strong>Viagem para Londres</strong></h5>
           <p class="card-text">Destino: Londres</p>
           <p class="card-text">Data de Partida: 15/04/2025</p>
-          <p class="card-text"><b>Pacotes a partir de <br>R$2.099,00</b></b></p>
+          <p class="card-text"><b>Pacotes a partir de <br>R$5.500,00</b></b></p>
           <a href="/DetalhesPacotes/detalhesLondres.html" class="btn btn-primary">Ver Detalhes</a>
         </div>
       </div>
 
-      <div class="card" style="width: 18rem;">
-        <img src="maldivas.jpg" class="card-img-top" alt="imagemMaldivas">
+      <div class="card">
+        <img src="/Maldivas.jpg" class="card-img-top" alt="imagemMaldivas">
         <div class="card-body">
           <h5 class="card-title"><strong>Viagem para Maldivas</strong></h5>
           <p class="card-text">Destino: Maldivas</p>
           <p class="card-text">Data de Partida: 20/05/2025</p>
-          <p class="card-text"><b>Pacotes a partir de <br>R$14.213,00</b></b></p>
+          <p class="card-text"><b>Pacotes a partir de <br>R$8.673,43</b></b></p>
           <a href="/DetalhesPacotes/detalhesMaldivas.html" class="btn btn-primary">Ver Detalhes</a>
         </div>
       </div>
 
-      <div class="card" style="width: 18rem;">
-        <img src="disney.webp" class="card-img-top" alt="imagemDisney">
+      <div class="card">
+        <img src="/disney.webp" class="card-img-top" alt="imagemDisney">
         <div class="card-body">
           <h5 class="card-title"><strong>Viagem para Disney</strong></h5>
           <p class="card-text">Destino: Disney</p>
           <p class="card-text">Data de Partida: 10/06/2025</p>
-          <p class="card-text"><b>Pacotes a partir de <br>R$3.116,00</b></b></p>
+          <p class="card-text"><b>Pacotes a partir de <br>R$9.125,80</b></b></p>
           <a href="/DetalhesPacotes/detalhesOrlando.html" class="btn btn-primary">Ver Detalhes</a>
         </div>
       </div>
@@ -92,8 +92,8 @@
   <footer class="footer">
     <p>&copy; 2025 <em>World Tour</em>. Todos os direitos reservados.</p>
   </footer>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </body>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 
 </html>
