--- a/publico/login.html
+++ b/publico/login.html
@@ -49,43 +49,44 @@
       </div>
     </nav>
   </header>
-
+<main>
   <div class="container w-50">
     <h2><strong>Faça o seu Login</strong></h2>
     <form method="POST" action="/login" class="row g-3 needs-validation" novalidate>
-      <div class="row pt-4">
-        <div class="col-md-4">
-          <label for="validationCustom01" class="form-label">Email</label>
-          <input type="text" class="form-control" id="usuario" name="usuario" value="" required>
-          <div class="valid-feedback">
-            OK!
-          </div>
-          <div class="invalid-feedback">
-            Por favor, informe o seu email!
-          </div>
-        </div>
-      </div>
-      <div class="row pt-4">
-        <div class="col-md-4">
-          <label for="validationCustomUsername" class="form-label">Senha:</label>
-          <div class="input-group has-validation">
-            <span class="input-group-text" id="inputGroupPrepend">#</span>
-            <input type="password" class="form-control" id="senha" name="senha" aria-describedby="inputGroupPrepend" required>
+        <div class="row pt-7">
+          <div class="col-md-7">
+            <label for="validationCustom01" class="form-label">Email</label>
+            <input type="text" class="form-control" id="usuario" name="usuario" value="" required>
             <div class="valid-feedback">
               OK!
             </div>
             <div class="invalid-feedback">
-              Por favor, informe a senha.
+              Por favor, informe o seu email!
             </div>
           </div>
         </div>
-      </div>
-      <div class="row pt-2">
-        <div class="col-12">
-          <button class="btn btn-primary" type="submit">Entrar</button>
-          <button class="btn btn-secondary" type="button" onclick="history.back()">Voltar</button>
+        <div class="row pt-7">
+          <div class="col-md-7">
+            <label for="validationCustomUsername" class="form-label">Senha:</label>
+            <div class="input-group has-validation">
+              <input type="password" class="form-control" id="senha" name="senha" aria-describedby="inputGroupPrepend" required>
+              <div class="valid-feedback">
+                OK!
+              </div>
+              <div class="invalid-feedback">
+                Por favor, informe a senha.
+              </div>
+            </div>
+          </div>
         </div>
-      </div>
+        <div class="botoes-login">
+          <div class="row pt-2">
+            <div class="col-12">
+              <button class="btn btn-primary" type="submit">Entrar</button>
+              <button class="btn btn-secondary" type="button" onclick="history.back()">Voltar</button>
+            </div>
+          </div>
+        </div>
     </form>
     <script>
       (() => {
@@ -106,11 +107,12 @@
       })()
     </script>
   </div>
-
+</main>
   <footer class="footer">
     <p>&copy; 2025 <em>World Tour</em>. Todos os direitos reservados.</p>
   </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+  <script src="/scriptValidacaologin.js"></script>
 </body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 
 </html>
