--- a/publico/passagens.html
+++ b/publico/passagens.html
@@ -11,17 +11,17 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html"><strong>World Tour</strong></a>
+        <a class="navbar-brand" href="/index.html"><strong>World Tour</strong></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="pacotes.html">Pacotes</a>
+              <a class="nav-link active" aria-current="page" href="/pacotes.html">Pacotes</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="passagens.html">Passagens</a>
+              <a class="nav-link active" href="/passagens.html">Passagens</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link active dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -34,13 +34,13 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="sobre.html">Sobre</a>
+              <a class="nav-link active" aria-current="page" href="/sobre.html">Sobre</a>
             </li>         
   </ul>
       <form class="d-flex">
-          <a href="login.html" class="btn btn-primary">Login</a>
+          <a href="/login.html" class="btn btn-primary">Login</a>
       <div class="botao-cadastrar">
-          <a href="/privado/cadastro.html" class="btn btn-outline-secondary">Cadastre-se</a>
+          <a href="/cadastro.html" class="btn btn-outline-secondary">Cadastre-se</a>
       </div>
       </form>
   </div>
@@ -50,6 +50,7 @@
 
 <main>
   <h2><b>Voos em Destaque</b></h2>
+
   <div class="row row-cols-1 row-cols-md-3 g-4">
     <div class="col">
       <div class="card h-50">
@@ -61,14 +62,13 @@
           <div class="d-grid gap-2 d-md-block">
             <button class="btn btn-primary" type="button">Comprar</button>
           </div>
-          
         </div>
-
       </div>
     </div>
+
     <div class="col">
       <div class="card h-50">
-        <img src="capadocia.jpg" class="card-img-top" alt="imagem-cidade-Capadocia">
+        <img src="capadocia.jpg" class="card-img-top" alt="imagem-cidade-Australia">
         <div class="card-body">
           <h5 class="card-title">Voe para a Capadócia</h5>
           <p class="card-text">Conheça a Capadócia <b>por apenas R$ 6x 750,00 ida e volta.</b></p>
@@ -77,12 +77,12 @@
             <button class="btn btn-primary" type="button">Comprar</button>
           </div>
         </div>
-
       </div>
     </div>
+
     <div class="col">
       <div class="card h-50">
-        <img src="australia.jpeg" class="card-img-top" alt="imagem-cidade-Australia">
+        <img src="Australia-1.jpg" class="card-img-top" alt="imagem-cidade-Australia">
         <div class="card-body">
           <h5 class="card-title"> Voe para a Austrália</h5>
           <p class="card-text">Conheça a terra dos Cangurus e se divirta com essa cultura, <b>por apenas R$ 7x de 802,95 ida e volta.</b></p>
@@ -91,7 +91,6 @@
             <button class="btn btn-primary" type="button">Comprar</button>
           </div>
         </div>
-   
       </div>
     </div>
   </div>
@@ -111,6 +110,7 @@
 
       </div>
     </div>
+
     <div class="col">
       <div class="card h-50">
         <img src="salvador.webp" class="card-img-top" alt="imagem-cidade-Salvador">
@@ -122,29 +122,28 @@
             <button class="btn btn-primary" type="button">Comprar</button>
           </div>
         </div>
-
       </div>
     </div>
+
     <div class="col">
       <div class="card h-50">
-        <img src="floripa.webp" class="card-img-top" alt="imagem-cidade-Florianopolis">
+        <img src="floripa.jpg" class="card-img-top" alt="imagem-cidade-Salvador">
         <div class="card-body">
           <h5 class="card-title">Florianopólis</h5>
-          <p class="card-text">Com prais de tirar o folego, conheça Florianopólis <b>por apenas R$ 3x 103,65 ida e volta.</b></p>
-          <p class="card-text">Voo saindo de Goiania -  GO</p>
+          <p class="card-text">Com prais de tirar o folego, conheça Florianopólis<b>por apenas R$ 3x 103,65 ida e volta.</b></p>
+          <p class="card-text">Voo saindo de Goiania - GO</p>
           <div class="d-grid gap-2 d-md-block">
             <button class="btn btn-primary" type="button">Comprar</button>
           </div>
         </div>
-
       </div>
     </div>
-  </div>
 </main>
+
 <footer>
   <p>&copy; 2025 <em>World Tour</em>. Todos os direitos reservados.</p>
 </footer>
-</body>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+</body>
 </html>
