--- a/publico/sobre.html
+++ b/publico/sobre.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>World Tour</title>
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="/estilo.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
@@ -18,10 +18,10 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="pacotes.html">Pacotes</a>
+                    <a class="nav-link active" aria-current="page" href="/pacotes.html">Pacotes</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" href="passagens.html">Passagens</a>
+                    <a class="nav-link active" href="/passagens.html">Passagens</a>
                   </li>
                   <li class="nav-item dropdown">
                     <a class="nav-link active dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -34,13 +34,13 @@
                     </ul>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="sobre.html">Sobre</a>
+                    <a class="nav-link active" aria-current="page" href="/sobre.html">Sobre</a>
                   </li>         
         </ul>
             <form class="d-flex">
-                <a href="login.html" class="btn btn-primary">Login</a>
+                <a href="/login.html" class="btn btn-primary">Login</a>
             <div class="botao-cadastrar">
-                <a href="/privado/cadastro.html" class="btn btn-outline-secondary">Cadastre-se</a>
+                <a href="/cadastro.html" class="btn btn-outline-secondary">Cadastre-se</a>
             </div>
 
             </form>
@@ -61,7 +61,7 @@
 <footer>
   <p>&copy; 2025 <em>World Tour</em>. Todos os direitos reservados.</p>
 </footer>
-</body>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+</body>
 </html>
